Closed Bug 27524 Opened 25 years ago Closed 25 years ago

General perf work for parsing engine

Categories

(Core :: DOM: HTML Parser, defect, P3)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: rickg, Assigned: harishd)

References

()

Details

This is the list of tasks we're currently working on in the parsing engine to enhance performance: Task: Reduce use of nsString in general Status: Done; rickg -- 7Feb99 Task: Reduce copying string data Status: WIP; enhanced by rickg on 7Feb99 to eliminate str copies use GetIdentifier() rather than ReadIdentifier(). Harish has also updated Consume() methods to eliminate coping. Task: Increase perf of substring searching of ranges Status: WIP -- should land on during M14. Task: Eliminate nodes, use only tokens; Status: WIP -- harishd
Task: Speed mods for 2 highly used string routines: toInteger() and Find(). Status: ToInteger() is 3-4x faster; Find() is up to 5x faster (some contexts)
Closing this placeholder out. We'll open a new one after the next round of quantify runs.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
updated qa contact.
QA Contact: janc → bsharma
Verified on: build: 2001-07-02-04-Trunk platform: WinNT Marking verified as per above developer comments.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.