major perf mods for bug 27524, and removed deprecated methods; r=harishd